fix link bug on mobile

--- a/_less/index.less
+++ b/_less/index.less
@@ -124,7 +124,7 @@
 		}
 	}
 	#about-cta > a {
-		float: left;
+		float: none;
 		display: block;
 		// .font-size(1*@second-modular);
 		.base(margin,top,1*@first-modular);
@@ -154,6 +154,7 @@
 			.base(margin,top,0);
 		}
 		#about-cta > a {
+			float: left;
 			.base(margin,top,3*@first-modular);
 		}
 	}
